--- a/website/web/css/sl-slide.css
+++ b/website/web/css/sl-slide.css
@@ -1,6 +1,6 @@
 .sl-slider-wrapper {
 	width: 100%;
-	height: 520px;
+	height: 424px;
 	position: relative;
 	overflow: hidden;
 }
@@ -99,15 +99,18 @@
 	display: none;
 }
 .sl-slide-horizontal .sl-slide-inner {
-	background: #3498DB;
+	background: url(../images/sample/banner/banner1.jpg) no-repeat center;
+	background-size: cover;
 }
 
 .sl-slide-vertical .sl-slide-inner {
-	background: #E67E22;
+	background: url(../images/sample/banner/banner2.jpg) no-repeat center;
+	background-size: cover;
 }
 
 .item3 .sl-slide-inner {
-	background: #9B59B6;
+	background: url(../images/sample/banner/banner3.jpg) no-repeat center;
+	background-size: cover;
 }
 
 .sl-slider h2 {
@@ -120,7 +123,7 @@
 }
 
 .sl-slider h2, .sl-slider h3{
-	color: #fff;
+	color: #000;
 }
 
 .sl-slider h3 {
